Tweaks to font size on navigation. Discovered potential issue: it's possible to toggle the nav bar invisible using the toggle icon, then resize the window and make the toggle icon disappear.  Need to fix.

--- a/css/main.css
+++ b/css/main.css
@@ -62,7 +62,7 @@ a {
   text-decoration: none;
 }
 #mainHeader nav > ul {
-  font-size: 1.2em;
+  font-size: 1.1em;
   margin: -0.4em 4em 0.4em;
   padding: 0;
   border-top: solid white 1px;
@@ -104,6 +104,7 @@ nav ul ul {
   list-style-type: none;
   background-color: transparent;
   width: 100%;
+  font-size: 0.9em;
 }
 
 nav ul li:hover ul {
